refactor : Validation, 중복 응답값 제거, Http Method 수정, 메서드명 변경