@@ -6,7 +6,6 @@ import com.dingdong.domain.domains.idcard.domain.enums.CharacterType;
 import com.dingdong.domain.domains.user.domain.User;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Builder;
 import lombok.Getter;
 
@@ -28,16 +27,13 @@ public class UserProfileDto {
     @Schema(description = "사용자 프로필 이미지 Url")
     private String profileImageUrl;
 
-    @Schema(description = "사용자 캐릭터 타입")
+    @Schema(description = "사용자 캐릭터 타입 (캐릭터 이름 : 생성한 캐릭터 타입, null : 캐릭터를 생성하지 않은 경우)")
     private CharacterType characterType;
 
-    @Schema(description = "사용자 캐릭터 생성 여부 (true : 캐릭터 타입 존재, false : 캐릭터 타입 null)")
-    private boolean isCharacterCreated;
-
     @Schema(description = "사용자가 속한 행성 ID 리스트")
-    private List<Long> planetIds;
+    private List<Long> communityIds;
 
-    public static UserProfileDto from(User user, boolean isCharacterCreated) {
+    public static UserProfileDto from(User user) {
         return UserProfileDto.builder()
                 .userId(user.getId())
                 .email(user.getEmail())
@@ -45,11 +41,7 @@ public class UserProfileDto {
                 .ageRange(user.getAgeRange())
                 .profileImageUrl(null)
                 .characterType(user.getUserCharacterType())
-                .isCharacterCreated(isCharacterCreated)
-                .planetIds(
-                        user.getCommunities().stream()
-                                .map(Community::getId)
-                                .collect(Collectors.toList()))
+                .communityIds(user.getCommunities().stream().map(Community::getId).toList())
                 .build();
     }
 }
